--- a/index.qmd
+++ b/index.qmd
@@ -5,3 +5,7 @@ title: "Irena's Website"
 This is a Quarto website.
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+
+# My Title
+
+![Image Caption](./images/13-6084-VODENSKA%20BIO.JPG){width="80%" fig-align="center"}
